fix pre overflow

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -88,6 +88,7 @@ pre {
     color: $color-code-text;
     padding: 1rem;
     line-height: 1.7rem;
+    overflow-x: auto;
 }
 
 .page {
